--- a/CoffeeHouseProject/CoffeeHouseProject.csproj
+++ b/CoffeeHouseProject/CoffeeHouseProject.csproj
@@ -17,7 +17,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="ViewModel\basket.png" />
+    <None Remove="View\basket.png" />
   </ItemGroup>
 
   <ItemGroup>
@@ -32,13 +32,13 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Resource Include="ViewModel\basket.png">
+    <Resource Include="View\basket.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
   </ItemGroup>
 
   <ItemGroup>
-    <Page Update="ViewModel\LoginWindow.xaml">
+    <Page Update="View\LoginWindow.xaml">
       <CustomToolNamespace></CustomToolNamespace>
     </Page>
   </ItemGroup>
